[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/game/spawner.gd" type="Script" id=1]
[ext_resource path="res://scenes/bubble/bubble.tscn" type="PackedScene" id=2]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )
bubble_scene = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="DifficultyUpTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyUpTimer" to="." method="_on_DifficultyUpTimer_timeout"]
